.k8s/deployment.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: ${KUBE_NAMESPACE}
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            nodeSelector:
                ${WORKER_NODE_LABEL}
            imagePullSecrets:
                - name: ghcr-secret
            containers:
                - name: backend
                  image: ${IMAGE_BASE}:${IMAGE_TAG}
                  imagePullPolicy: Always
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
                      limits:
                          memory: "256Mi"
                          cpu: "1000m"
                  ports:
                      - containerPort: 8070
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8070
                      initialDelaySeconds: 60
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 8070
                      initialDelaySeconds: 60
