.k8s/service.template.yml
apiVersion: v1
kind: Service
metadata:
    namespace: ${KUBE_NAMESPACE}
    name: backend-service
spec:
    selector:
        app: backend
    ports:
        -   port: 8070
            protocol: TCP
            targetPort: 8070
    type: ClusterIP
